@@ -164,6 +164,8 @@ C-API
 Tests
 -----
 
+- Issue #8248: Add some tests for the bool type.  Patch by Gregory Nofi.
+
 - Issue #8263: Now regrtest.py will report a failure if it receives a
   KeyboardInterrupt (SIGINT).
 
